# PowerTools

./: default_settings.ron  limits_override.ron  main.py  package.json  plugin.json  pnpm-lock.yaml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
assets/: thumbnail.xcf
backend/: Cargo.toml  build.sh
backend/community_settings_core/: Cargo.toml
backend/community_settings_core/src/v1/: metadata.rs  mod.rs  setting.rs
backend/community_settings_srv/: Cargo.toml  README.md
backend/community_settings_srv/src/: cli.rs  file_util.rs  main.rs
backend/community_settings_srv/src/api/: get_game.rs  get_setting.rs  mod.rs  save_setting.rs
backend/limits_core/: Cargo.toml
backend/limits_core/src/: lib.rs
backend/limits_core/src/json/: base.rs
backend/limits_core/src/json_v2/: base.rs  battery_limit.rs  config.rs  cpu_limit.rs  gpu_limit.rs  limits.rs  mod.rs  range.rs
backend/limits_srv/: Cargo.toml  pt_limits.json  pt_limits_v2.json
backend/limits_srv/src/: main.rs
backend/sd_led/: Cargo.toml
backend/sd_led/src/: lib.rs  raw_io.rs
backend/src/: consts.rs  main.rs  utility.rs
backend/src/api/: api_types.rs  general.rs  gpu.rs  handler.rs  message.rs  mod.rs  web.rs
backend/src/cli/: args.rs  clean.rs  dump_sys.rs  mod.rs
backend/src/persist/: driver.rs  error.rs  file.rs  general.rs  gpu.rs  mod.rs
backend/src/settings/: driver.rs  general.rs  mod.rs  traits.rs  util.rs
backend/src/settings/detect/: auto_detect.rs  limits_worker.rs  utility.rs
backend/src/settings/dev_mode/: battery.rs  cpu.rs  gpu.rs  mod.rs
backend/src/settings/generic/: battery.rs  cpu.rs  gpu.rs  mod.rs  traits.rs
backend/src/settings/generic_amd/: cpu.rs  gpu.rs  mod.rs
backend/src/settings/steam_deck/: battery.rs  cpu.rs  gpu.rs  mod.rs  power_dpm_force.rs  util.rs
backend/src/settings/unknown/: battery.rs  cpu.rs  gpu.rs  mod.rs
backend/src/state/: mod.rs
backend/src/state/steam_deck/: battery.rs
src/: backend.ts  consts.ts  index.tsx
src/components/: battery.tsx  debug.tsx  gpu.tsx  text_field_modal.tsx
src/store/: page.tsx
